[package]
name = "atelier-rest-api"
version = "0.1.0"
authors = ["Christoph Burgdorf <christoph.burgdorf@bvsn.org>"]

[dependencies.nickel]
git = "https://github.com/nickel-org/nickel.rs.git"

[dependencies.git-grid]
# git = "file:/Users/cburgdorf/Documents/hacking/git-grid"
git = "https://github.com/kanvaz/git-grid.git"
